Create Classifier with Jess

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/MealPlannerClassifier.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jess.jar=../../Downloads/Jess71p2/lib/jess.jar
+file.reference.jess.jar-1=jess-lib/jess.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jess.jar}
+    ${file.reference.jess.jar}:\
+    ${file.reference.jess.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
